--- a/index.html
+++ b/index.html
@@ -4,40 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kateryna_Khyzhniak</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Kateryna Khyzhniak - QA Engineer</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!--Заголовок1-->
-    <div class="block">
-        <p>Kateryna Khyzhniak</p>
-        <p>general QA</p>
-    </div>
+    <header class="header">
+        <h1>Kateryna Khyzhniak</h1>
+        <h2>QA Engineer</h2>
+    </header>
+    <main>
+        <section class="section">
+            <h3>Contact Information</h3>
+            <p>Email: <a href="mailto:lima.marcelina18@gmail.com">lima.marcelina18@gmail.com</a></p>
+            <p>LinkedIn: <a href="http://www.linkedin.com/in/kateryna-khyzhniak"
+                    target="_blank">linkedin.com/in/kateryna-khyzhniak</a></p>
+        </section>
 
-    <!-- Як звʼязатися -->
-    <div class="block">
-        <a href="http://www.linkedin.com/in/kateryna-khyzhniak">Linkedin</a>
-        <p>lima.marcelina18@gmail.com</p>
-    </div>
-    <div class="block">
-        <p>Practical skills in QA</p>
-        <ul>
-            <li>CheckList, TestCase, Bug report</li>
-            <li>Test-design techniques </li>
-            <li>Version Control Systems (GIT, GitLab,GitHub</li>
-            <li>REST API</li>
-        </ul>
-
-        <div class="block">
-            <p>Education</p>
+        <section class="section">
+            <h3>Skills</h3>
             <ul>
-                <li>Beetroot Academy, QA manual, 2021 </li>
-                <li>ITDVN courses, Web Testing, 2021 </li>
-                <li>The Bohdan Khmelnytsky National University of Cherkasy, Faculty of Physics and Mathematics </li>
+                <li>Test design and analysis</li>
+                <li>Version control (Git, GitLab, GitHub)</li>
+                <li>Web and API testing (Postman, REST API)</li>
+                <li>Bug reporting and documentation</li>
+                <li>HTML, CSS, SQL</li>
             </ul>
-        </div>
+        </section>
+
+        <section class="section">
+            <h3>Experience</h3>
+            <p><strong>OneReach.ai</strong> (2021-2024) - QA Engineer</p>
+            <ul>
+                <li>Tested components in JavaScript, internal services, and web apps</li>
+                <li>Developed and executed test cases</li>
+                <li>Created automated API tests in Postman</li>
+                <li>Mentored team members</li>
+            </ul>
+        </section>
+
+        <section class="section">
+            <h3>Education</h3>
+            <ul>
+                <li>Beetroot Academy - QA Manual (2021)</li>
+                <li>ITDVN Courses - Web Testing (2021)</li>
+                <li>Bohdan Khmelnytsky National University of Cherkasy - Faculty of Physics and Mathematics</li>
+            </ul>
+        </section>
+    </main>
+    <footer class="footer">
+        <p>© 2024 Kateryna Khyzhniak</p>
+    </footer>
 </body>
 
 </html>
